--- a/src/assets/graphicScreen.css
+++ b/src/assets/graphicScreen.css
@@ -18,3 +18,10 @@
   width: 100%;
   height: auto;
 }
+
+.player-name {
+  text-align: center;
+  color: #fff;
+  font-size: 18px;
+  margin-top: 5px;
+}
