--- a/src/assets/graphicScreen.css
+++ b/src/assets/graphicScreen.css
@@ -2,7 +2,7 @@
   width: 1280px;
   height: 720px;
   border: 2px solid #000;
-  background-image: url('../assets/background.jpg');
+  background-image: url('/graphic/background.jpg');
 }
 
 .character-frame {
