--- a/src/assets/graphicScreen.css
+++ b/src/assets/graphicScreen.css
@@ -37,3 +37,24 @@
   left: 165px;
   top: -260px;
 }
+
+.tournament-title {
+  text-align: center;
+  color: #fff;
+  font-size: 24px;
+  margin-top: 10px;
+}
+
+.tournament-info {
+  text-align: start;
+  color: #fff;
+  font-size: 20px;
+  margin-top: 5px;
+}
+
+.tournament-url {
+  text-align: end;
+  color: #fff;
+  font-size: 20px;
+  margin-top: 5px;
+}
