--- a/src/assets/graphicScreen.css
+++ b/src/assets/graphicScreen.css
@@ -5,6 +5,7 @@
   background-image: url('/graphic/background.jpg'); /* Change this to a URL if you want to use a custom background */
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .character-frames-container {
@@ -12,7 +13,7 @@
   place-content: center;
   grid: auto / repeat(4, 1fr);
   margin-top: 0px;
-  margin-left: 60px;
+  margin-left: 80px;
 }
 
 .character-frame {
@@ -91,4 +92,12 @@
   font-weight: bold;
   color: #fff;
   text-shadow: 1px 1px 2px #000;
+}
+
+.tournament-logo {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
 }
