--- a/src/assets/graphicScreen.css
+++ b/src/assets/graphicScreen.css
@@ -12,8 +12,11 @@
   display: grid;
   place-content: center;
   grid: auto / repeat(4, 1fr);
-  margin-top: 0px;
-  margin-left: 80px;
+  position: absolute;
+  top: 40px;
+  left: 140px;
+  column-gap: 40px;
+  row-gap: 10px;
 }
 
 .character-frame {
@@ -65,7 +68,7 @@
   text-align: center;
   color: #fff;
   font-size: 24px;
-  margin-top: 10px;
+  margin-top: 6px;
 }
 
 .tournament-info {
@@ -73,6 +76,7 @@
   color: #fff;
   font-size: 20px;
   margin-left: 30px;
+  margin-top: 640px;
 }
 
 .tournament-url {
