--- a/src/assets/graphicScreen.css
+++ b/src/assets/graphicScreen.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Paperlogy;
+  src: url('/fonts/Paperlogy-7Bold.ttf');
+}
+
 .canvas {
   width: 1280px;
   height: 720px;
@@ -6,6 +11,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  font-family: Paperlogy;
 }
 
 .character-frames-container {
@@ -36,7 +42,7 @@
 
 .player-name-frame {
   width: 200px;
-  height: 30px;
+  height: 40px;
   background-color: rgba(255, 255, 255, 1);
   position: relative;
   top: -10px;
@@ -48,8 +54,10 @@
 .player-name {
   text-align: center;
   color: #000;
-  font-size: 18px;
+  font-size: 14px;
   margin-top: 5px;
+  position: relative;
+  top: 10px;
 }
 
 .character-frame .secondary-character-image {
@@ -76,7 +84,7 @@
   color: #fff;
   font-size: 20px;
   margin-left: 30px;
-  margin-top: 640px;
+  margin-top: 630px;
 }
 
 .tournament-url {
@@ -108,10 +116,10 @@
 
 .branding-text {
   color: #fff;
-  font-size: 20px;
+  font-size: 16px;
   position: absolute;
   bottom: 680px;
-  left: 1080px;
+  left: 1100px;
 }
 
 /* IDs */
@@ -122,7 +130,7 @@
   width: 250px;
   height: 350px;
   top: 140px;
-  left: -60px;
+  left: -40px;
 }
 
 #player-name-frame-1 {
@@ -136,25 +144,25 @@
 /* FRAME 2 */
 
 #frame-2 {
-  left: 260px;
+  left: 280px;
 }
 
 /* FRAME 3 */
 
 #frame-3 {
-  left: 500px;
+  left: 520px;
 }
 
 /* FRAME 4 */
 
 #frame-4 {
-  left: 740px;
+  left: 760px;
 }
 
 /* FRAME 5 */
 
 #frame-5 {
-  left: 220px;
+  left: 240px;
   top: 320px;
   width: 180px;
   height: 280px;
@@ -168,7 +176,7 @@
 /* FRAME 6 */
 
 #frame-6 {
-  left: 420px;
+  left: 440px;
   top: 320px;
   width: 180px;
   height: 280px;
@@ -182,7 +190,7 @@
 /* FRAME 7 */
 
 #frame-7 {
-  left: 620px;
+  left: 640px;
   top: 320px;
   width: 180px;
   height: 280px;
@@ -196,7 +204,7 @@
 /* FRAME 8 */
 
 #frame-8 {
-  left: 820px;
+  left: 840px;
   top: 320px;
   width: 180px;
   height: 280px;
