--- a/src/assets/graphicScreen.css
+++ b/src/assets/graphicScreen.css
@@ -8,6 +8,7 @@
   height: 720px;
   border: 2px solid #000;
   display: flex;
+  background-size: cover;
   flex-direction: column;
   position: relative;
   font-family: Paperlogy;
